--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-* linguist-vendored
-*.python linguist-detectable=true
+static/* linguist-vendored
+site_cartao/static/* linguist-vendored
+site_cartao/templates/* linguist-vendored
